--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
+    "dev": "node server.js",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "echo 'Building for Vercel'"
   },
   "keywords": [],
   "author": "",
